project ('dbs_project' , 'c')
gtkdep = dependency ('gtk4')
x11_dep = dependency ('x11')
pango_dep = dependency ('pango')
glib_dep = dependency ('glib-2.0')
gio_dep = dependency ('gio-2.0')
sqlite3_dep = dependency ('sqlite3')
# regex_dep = dependency ('regex')
executable ('main' , 'main.c' , dependencies : [gtkdep , x11_dep , pango_dep , glib_dep , sqlite3_dep , gio_dep])
